[gd_scene load_steps=6 format=3 uid="uid://bnh5rt7pofcft"]

[ext_resource type="Script" uid="uid://hycxtdfq80u1" path="res://scenes/player/player.gd" id="1_8afob"]
[ext_resource type="AudioStream" uid="uid://dk0h6f0mink7y" path="res://audio/sound_effects/scream.mp3" id="2_dovo2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dovo2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8afob"]
radius = 0.54272

[sub_resource type="CapsuleMesh" id="CapsuleMesh_8afob"]

[node name="player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_8afob")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01069, 0)
shape = SubResource("CapsuleShape3D_dovo2")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.50368, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="SpotLight3D" type="SpotLight3D" parent="Head"]
spot_range = 10.0

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01069, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CapsuleShape3D_8afob")
debug_color = Color(0.980373, 0, 0.380223, 0.42)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_8afob")

[node name="game_over" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_dovo2")
volume_db = 15.0

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="finished" from="game_over" to="." method="_on_game_over_finished"]
